--- a/components/AdminProduct/AdminProduct.css
+++ b/components/AdminProduct/AdminProduct.css
@@ -348,8 +348,8 @@
   }
   
   .tools .filter form {
-    width: 60%;
-    margin: 0 auto;
+    width: 100%;
+    margin: 10px auto;
   }
   
   .admin-product-form {
