--- a/components/HomeAdmin/HomeAdmin.css
+++ b/components/HomeAdmin/HomeAdmin.css
@@ -754,6 +754,24 @@ tr:hover {
   background-color: #333;
   color:white;
 }
+.mainAuthority{
+  display: none;
+}
+.closeButton{
+  width: 20px;
+  height: 20px;
+  border-radius: 3px;
+  align-items: center;
+  margin-left: 130px;
+  color: red;
+  border: 2px;
+}
+.closeButton:hover {
+  border-color: rgba(0, 0, 0, 0.6); /* Khi hover, viền màu đen tối */
+}
+.closeButton:active {
+  filter: brightness(70%); /* Giảm độ sáng xuống 80% khi nút được click */
+}
 
 /* End Employee */
 
