--- a/components/HomeAdmin/HomeAdmin.css
+++ b/components/HomeAdmin/HomeAdmin.css
@@ -647,6 +647,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .employee__title{
   font-family: 'Roboto', sans-serif;
@@ -672,6 +673,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .form-group {
@@ -702,8 +704,8 @@
   text-align: center;
   margin-top: 10px;
   padding-bottom: 10px;
-  width: calc(50% - 200px);
-  margin-left: 35%;
+  width: 45%;
+  /* margin-left: 35%; */
   flex-wrap: wrap;
 }
 
