--- a/public/components/ManageUserList/ManageUserList.css
+++ b/public/components/ManageUserList/ManageUserList.css
@@ -23,9 +23,9 @@
 .admin__content--body__filter--gr1,
 .admin__content--body__filter--gr2 {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 20px;
   margin-bottom: 20px;
 }
 
