--- a/public/components/HomeAdmin/HomeAdmin.css
+++ b/public/components/HomeAdmin/HomeAdmin.css
@@ -776,8 +776,8 @@ tr:hover {
 }
 
 /* End Employee */
+/* bill */
 
-<<<<<<< HEAD
 .bill_content--model--ctpn label input:checked + .slider{
   background-color: rgb(94, 94, 243);
   width: 100%;
@@ -891,13 +891,13 @@ tr:hover {
 }
 .body__filter--actions--bill button {
   border: none;
-  height: 50px;
+  height: 40px;
   min-width: 80px;
   font-size: 16px;
   border-radius: 5px;
   cursor: pointer;
   margin-right: 10px;
-  padding: 20px 20px;
+  padding: 5px 10px;
   font-weight: 600;
 }
 .body__filter--field.body__filter--orderDate input[type="date"]{
@@ -926,9 +926,9 @@ tr:hover {
 .bill_content--model--ctpn{
   overflow: auto;
   position: absolute;
-  top: 10%;
+  top: 5%;
   padding: 0 2% 2% 2%;
-  width: 70%;
+  width: 68.8%;
   height: 90vh;
   background-color: white;
 }
@@ -1053,8 +1053,6 @@ tr:hover {
   font-size: 16px; 
   margin: 5px;
 }
-=======
->>>>>>> 08285baece043a94d328d99065cfaa43149dfc7d
 /* Customer */
 .admin__content--customer__content{
   position: absolute;
