--- a/public/components/AdminProduct/AdminProduct.css
+++ b/public/components/AdminProduct/AdminProduct.css
@@ -20,7 +20,7 @@
   th {
     border: 1px solid #3333;
     padding: 8px;
-    text-align: left;
+    text-align: center;
     cursor: pointer;
   }
   
