--- a/public/components/product/product.css
+++ b/public/components/product/product.css
@@ -1,18 +1,185 @@
+#product-detail_model{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0,0.4);
+    display: none;
+}
+#close-toggler:hover{
+    cursor: pointer;
+    color: red;
+}
+
+.overlay-container {
+    display: block;
+    width: 80%;
+    height: 75%;
+    background-color: white;
+    position: relative;
+    margin-top: 5%;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.overlay-container .overlay-body .overlay-body-left {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.overlay-container .overlay-body .overlay-body-left img {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 5px;
+    width: 60%;
+}
+
+.overlay-container .overlay-body .overlay-body-right {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    position: relative;
+    width: 40%;
+    height: 100%;
+    gap: 4%;
+    top: 10%;
+}
+.overlay-body-right p {
+    color: rgb(105, 105, 105);
+    margin-right: 10px;
+}
+#overlay-price {
+    margin-bottom: 5px;
+}
+.overlay-body-right span {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 20%;
+}
+.quantityBtn {
+    margin-bottom: 20px;
+    width: 100%;
+    display: inline-table;
+}
+.quantityBtn h3{
+    margin-bottom: 20px;
+}
+.quantityBtn #decrement:active ,.quantityBtn #increment:active{
+	background-color: rgb(128, 181, 220,0.7);
+	color: #fff;
+}
+.quantityBtn button {
+    display: inline-block;
+    font-size: 18pt;
+    color: black;
+    width: 40px;
+    height: 35px;
+    background-color: rgb(128, 181, 220);
+    outline: none;
+    cursor: pointer;
+}
+.overlay-body-right .overlay-right-btn {
+    display: flex;
+    bottom: 0px;
+    right: 0px;
+}
+.quantityBtn #quantity {
+    font-size: 17pt;
+    height: 40px;
+    text-align: center;
+}
+.overlay-body-right .overlay-right-btn button p {
+    font-weight: bold;
+    color: white;
+}
+.overlay-body-right .overlay-right-btn button {
+    display: flex;
+    background-color: rgb(105, 105, 105);
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+    gap: 10px;
+    padding: 30px;
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    transition: all 0.3s ease-in-out 0s;
+}
+.overlay-body-right h1 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+.overlay-container .overlay-container-top {
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(232, 232, 232);
+    padding: 0%;
+}
+.overlay-container .overlay-container-top .overlay-container-title {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0% 8%;
+    gap: 10%;
+}
+.overlay-container .overlay-container-top .overlay-container-btn {
+    padding-right: 8%;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: end;
+    display: none;
+    gap: 10%;
+}
+.overlay-container .overlay-body {
+    width: 100%;
+    height: calc(100% - 20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .container {
     display: flex;
     width: 100%;
     justify-content: left;
 }
 .leftmenu{
+    margin-top: 10%;
+    height: 100vw;
+    width: 20%;
     float: left;
     margin-left:5%;
-    /* margin-top: 12%; */
     overflow: hidden;
-    margin-bottom: 650px;
+}
+#container_content{
+    background-color:none;
+    width: 65%;
+   
+    margin-left: 2%;
+    margin-top: 10%;
+    height: 100vw;
 }
 #locdongian{
+    display: inline-block;
     background-color: rgb(171, 171, 171);
-    display: block;
+    /* display: block; */
     border-radius: 5px;
     padding: 5px;
 }
@@ -162,7 +329,6 @@
     float: left;
     width: 1150px;
     display: flex;
-    justify-content: center;
 }
 #img-product{
     width: 100%;
@@ -183,7 +349,7 @@
   }
   
 #img-product img{
-    width: 100%;
+    width: 80%;
     height: 100%;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
 }
@@ -197,11 +363,11 @@
 }
 
 #mota-product{
-    width: 100%;
+    width: 80%;
     height: 25%;
 }
 #datmua{
-    width: 100%;
+    width: 84.5%;
     height: 10%;
     color: whitesmoke;
     
@@ -255,7 +421,8 @@
 .pagination{
     text-align: center;
 }
-.pagination a{
+.page-item{
+    cursor: pointer;
     color: rgba(245, 245, 245, 0.999);
     text-decoration: none;
     padding: 8px 15px;
@@ -264,12 +431,18 @@
     margin: 0 5px;
     border-radius: 3px;
 }
-.pagination a#active{
+.page-item-active{
+    cursor: pointer;
+    color: rgba(245, 245, 245, 0.999);
+    text-decoration: none;
+    padding: 8px 15px;
+    display: inline-block;
     background-color: black;
+    margin: 0 5px;
+    border-radius: 3px;
     font-weight: bold;
-    border-radius: 5px;
 }
-.pagination a:hover:not(#active){
+.pagination li:hover:not(#active){
     background-color: black;
     border-radius: 5px;
 }
