--- a/public/components/product/product.css
+++ b/public/components/product/product.css
@@ -203,11 +203,31 @@
     width: 200px;
     margin: 5px;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 #locnangcao{
+    margin-top: 10px;
     background-color: rgb(171, 171, 171);
     display: inline-block;
     border-radius: 5px;
     padding: 5px;
+}
+#search_name{
+    border-radius: 5px;
+    height: 40px;
+    width: 200px;
+    margin: 5px;
+    padding-left: 5px;
+    font-size: 15px;
 }
 #khoanggia{
     border-radius: 5px;
@@ -215,6 +235,26 @@
     width: 200px;
     margin: 5px;
     font-size: 15px;
+}
+#all{
+    border-radius: 5px;
+    /* border: 1px solid black; */
+    background-color: gray;
+    height: 40px;
+    width: 200px;
+    margin: 5px;
+    font-size: 15px;
+    display: flex;
+    /* align-items: center; */
+}
+
+#all input[type="checkbox"]{
+    width: 30px;
+    margin: 5px;
+}
+#all h3{
+    margin-top: 10px;
+    color: #333;
 }
 #mountain{
     border-radius: 5px;
@@ -227,12 +267,14 @@
     display: flex;
     /* align-items: center; */
 }
-#mountain input[type="checkbox"]{
-    width: 30px;
+#all input[type="radio"],#mountain input[type="radio"],#road input[type="radio"],#kids input[type="radio"],#touring input[type="radio"]{
+    width: 20px;
     margin: 5px;
+    margin-right: 10px;
 }
+
 #mountain h3{
-    margin-top: 7px;
+    margin-top: 10px;
     color: #333;
 }
 #road{
@@ -246,12 +288,8 @@
     display: flex;
     /* align-items: center; */
 }
-#road input[type="checkbox"]{
-    width: 30px;
-    margin: 5px;
-}
 #road h3{
-    margin-top: 7px;
+    margin-top: 10px;
     color: #333;
 }
 #kids{
@@ -265,12 +303,9 @@
     display: flex;
     /* align-items: center; */
 }
-#kids input[type="checkbox"]{
-    width: 30px;
-    margin: 5px;
-}
+
 #kids h3{
-    margin-top: 7px;
+    margin-top: 10px;
     color: #333;
 }
 #touring{
@@ -284,18 +319,52 @@
     display: flex;
     /* align-items: center; */
 }
-#touring input[type="checkbox"]{
-    width: 30px;
-    margin: 5px;
-}
+
 #touring h3{
-    margin-top: 7px;
+    margin-top: 10px;
     color: #333;
 }
 .input_search{
     width: 600px;
     height: 40px;
     display: flex;
+}
+.div_search{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.div_search:hover{
+    background-color: rgb(231, 229, 229);
+}
+#container_search{
+    background-color: #fff;
+    margin-top: 10px;
+    width:32%;
+    height:auto;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto; /* Tạo thanh cuộn khi nội dung vượt quá kích thước của div */
+    max-height: 300px; /* Giới hạn động chiều cao của div */
+    
+}
+#container_search .container_content-search{
+    padding-left: 10px;
+    width: 75%;
+    height: 50px;
+    padding-top: 25px;
+}
+
+#container_search .search_img{
+    width: 25%;
+    height: 75px;
+}
+#container_search .search_img img{
+    width: 100%;
+    height: 100%;
 }
 .input_search input[type="search"]{
     width: 80%;
@@ -319,7 +388,7 @@
 }
 .divproduct{
     width: 50%;
-    height: 300px;
+    height: 350px;
     margin:20px;
     border: 0px solid black;
     border-radius: 5px;
