--- a/public/components/login/login.css
+++ b/public/components/login/login.css
@@ -10,7 +10,7 @@
     z-index: 100;
     opacity: 1;
     background-color: #fff;
-    height: 600px;
+    height: 670px;
     width: 900px;
     border-radius: 10px;
     top: 50%;
@@ -19,7 +19,7 @@
     transform: translate(-50%, -50%);
     transition: all 0.8s ease-in-out;
     animation: bottomUp 0.8s ease-in-out;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(101, 101, 122, 0.2) 0px 7px 29px 0px;
 }
 .register,
 .login {
@@ -58,9 +58,9 @@
   
   .register__background button,
   .login__background button {
-    background-color: #fff;
+    background-color: yellow;
     border: none;
-    color: #333;
+    color: #8f4040;
     height: 50px;
     width: 150px;
     border-radius: 20px;
@@ -144,7 +144,7 @@
     height: 100%;
     width: 50%;
     color: #fff;
-    background-color: #333;
+    background-color:  #333;
     border: none;
     z-index: 14;
     transition: transform 0.5s linear;
@@ -219,6 +219,8 @@
   .login__info h1,
   .register__info h1 {
     text-align: center;
+    color: black;
+    font-weight: bolder;
   }
   
   .login__info--input,
@@ -235,11 +237,13 @@
     font-weight: bold;
     font-size: 16px;
     margin-bottom: 3px;
+    color: black;
   }
   
   .login__info--input input,
-  .register__info--input input {
+  .register__info--input input, select {
     border-radius: 5px;
+    border: 1px solid #333;
     height: 40px;
     padding: 5px 10px;
     font-size: 14px;
@@ -272,7 +276,7 @@
     position: absolute;
     right: 0;
     width: 40px;
-    background-color: #333;
+    background-color: #8f4040;
     color: #fff;
     height: 37px;
     border-radius: 5px;
@@ -306,13 +310,20 @@
 .policy a {
     text-decoration: none;
     color: var(--hover-color);
+    font-weight: bold;
   }
-  
+  .error-message {
+    text-align: left;
+    width: 100%;
+    display: none;
+    color: red;
+    font-size: 14px;
+}
   .login__info--submit,
   .register__info--submit {
     width: 100%;
     border: none;
-    background-color: #333;
+    background-color: #8f4040;
     color: #fff;
     cursor: pointer;
     border-radius: 5px;
@@ -369,6 +380,7 @@
   .forgot__password a {
     color: #333;
     text-decoration: none;
+    font-weight: 900;
   }
   
   .signin,
