--- a/public/components/AdminProduct/AdminProduct.css
+++ b/public/components/AdminProduct/AdminProduct.css
@@ -20,7 +20,7 @@
   th {
     border: 1px solid #3333;
     padding: 8px;
-    text-align: left;
+    text-align: center;
     cursor: pointer;
   }
   
@@ -245,9 +245,52 @@
   
   .change-product-info button:active {
     transform: translateY(3px);
-    box-shadow: rgba(48, 191, 13, 0.983) 0px 0px 0px 0px;
+    box-shadow: rgba(48, 191, 13, 0.983);
   }
-  
+.form-group-type,.form-group-name label{
+    margin-right: 10px;
+    font-weight: bold;
+    width: 150px;
+}
+.form-group-name input{
+    padding: 5px;
+    width: 250px;
+}
+.form-group-type select{
+    height: 40px;
+    font-size: 16px;
+    border-radius: 5px;
+}
+.modal-active{
+    width: 350px;
+    height: auto;
+
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    visibility: visible;
+}
+.change-product-info form.form-group {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: 10px;
+}
+
+.change-product-info button {
+  width: 100px;
+  height: 30px;
+  font-size: medium;
+  font-weight: bold;
+  cursor: pointer;
+  color: #333;
+  background-color: rgb(69, 220, 69);
+  box-shadow: rgba(48, 191, 13, 0.983) 0px 3px 0px 0px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
   #changeImgFormEdit,
   #saveImgFormEdit,
   #deleteImgFormEdit {
@@ -264,53 +307,50 @@
     margin-bottom: 20px;
   }
   
+  
   .pagination {
-    width: 50%;
+    padding-top: 10px;
+    padding-bottom: 40px;
+    list-style: none;
     display: flex;
-    gap: 10px;
     justify-content: center;
-    margin: 0 auto;
-  }
-  
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
+    gap: 3px;
+
+}
+
+.pagination .page-item {
+    display: inline-block;
+    width: 40px;
+}
+
+.pagination .page-link {
+    padding: 5px 10px;
+    border-radius: 3px;
+    border: 1px solid #000000;
     text-decoration: none;
-    transition: background-color 0.3s;
-  }
-  
-  .pagination a.active {
-    background-color: hsl(0, 0%, 20%);
-    color: white;
-  }
-  
-  .pagination a:hover:not(.active) {
-    background-color: #ddd;
-  }
-  
-  .pagination a:first-child {
+    color: #333;
+    transition: all 0.3s ease;
+    
+
+}
+.pagination .page-link1{
+    border: none;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: #333;
+    transition: all 0.3s ease;
+}
+
+.pagination .page-link:hover {
+    background-color: #eee;
+}
+
+.pagination .page-item.active .page-link {
     background-color: #333;
     color: white;
-    padding: 8px 16px;
-    text-decoration: none;
-    cursor: pointer;
-    margin: 0 10px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  .pagination a:last-child {
-    background-color: #333;
-    color: white;
-    padding: 8px 16px;
-    text-decoration: none;
-    cursor: pointer;
-    margin: 0 10px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
+}
   
-  .tools {
+.tools {
     width: 100%;
     padding: 20px;
     gap: 20px;
