--- a/public/components/HomeAdmin/HomeAdmin.css
+++ b/public/components/HomeAdmin/HomeAdmin.css
@@ -677,6 +677,10 @@ tr:hover {
   font-weight: bold;
   font-size: 25px;
   margin-top: 5px;
+  color: orange;
+}
+#toHomeUser{
+  cursor: pointer;
 }
 
 .statistics__content--body__detail {
@@ -1156,6 +1160,179 @@ tr:hover {
   top: 0;
   bottom: 0;
 }
+/* Trang thống kê */
+
+.statistics--model {
+  position: fixed;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+}
+
+.statistics_content--model{
+  background-color: white;
+  position: absolute;
+  top: 10%;
+  width: 68.8%;
+  padding: 40px 0 10px 0;
+  /* height: 100vh; */
+}
+.statistics_content--model .close{
+  position: absolute;
+  right: 0px;
+  top: -10px;
+  font-size: 40pt;
+  background: none;
+  outline: none;
+  border: none;
+  color: black;
+  cursor: pointer;
+}
+.statistics_content--model .close:hover{
+  color: red;
+}
+.admin-statistics {
+  padding-bottom: 20px;
+}
+.admin-statistics .title_content {
+  margin-left: 26px;
+  font-size: 25px;
+  color: #333;
+  margin-bottom: 2px;
+}
+.admin-statistics .statistics_control .control_top{
+
+  margin-right: 30px;
+}
+.admin-statistics .statistics_control{
+  margin: 20px 0 20px 26px;
+  width: 100%;
+  display: flex;
+  /* align-items: center; */
+  /* background-color: #006266; */
+}
+.admin-statistics .statistics_control button{
+  border: none;
+  height: 32px;
+  min-width: 80px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  font-weight: 600;
+  margin-top: 25px;
+  color: #333;
+  background-color: rgb(69, 220, 69);
+  box-shadow: rgba(48, 191, 13, 0.983) 0px 3px 0px 0px;
+}
+
+#container_type-product{
+  margin-top: 5%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  /* background-color: #0ea1f6; */
+}
+
+#container_type-product .container_type-product_content{
+  width: 18%;
+  /* border-radius: 4%; */
+  border:#000 solid 2px;
+  background-color: whitesmoke;
+  /* background-color: #888; */
+  padding: 10px;
+  display: block;
+  text-align: center;
+}
+
+#container_type-product .container_type-product_content .price ,
+#container_type-product .container_type-product_content .quantity
+{
+color: orange;
+}
+#container_type-product .container_type-product_content  .show_content-statistics{
+  padding-top: 5px;
+  font-weight: bold;
+  text-decoration: underline;
+  cursor: pointer;
+}
+#container_type-product .container_type-product_content h3{
+  margin-bottom: 5px;
+}
+
+
+.admin-statistics .statistics_control select{
+  margin-top: 5px;
+  width: 100%;
+  height: 35px;
+  padding: 5px 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #333;
+  
+}
+
+.admin-statistics .statistics_control input{
+  margin-top: 5px;
+  width: 80%;
+  height: 35px;
+  padding: 5px 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #333;
+}
+.admin-statistics .statistics_control .control_date{
+  width: 25%;
+  margin-right: 30px;
+  /* background-color: #0ea1f6; */
+}
+#content-product th{
+  cursor:auto;
+}
+.menu i{
+  padding-left: 10px;
+  cursor: pointer;
+}
+.admin-statistics .statistics_control label{
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.admin-statistics .statistics_control .tb {
+  color: red;
+  font-weight: normal;
+  font-size: 12px;
+}
+
+.admin-statistics .statistics__title {
+  font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: #333;
+  color: white;
+  padding: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 10%;
+  /*border: 1px solid red; */
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+
+
 
 .receipt__content--top {
   /* border: 1px solid black; */
