--- a/public/components/ManageUserList/ManageUserList.css
+++ b/public/components/ManageUserList/ManageUserList.css
@@ -167,6 +167,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 3px 0px 2px 0px rgba(0, 0, 0, 0.3);
+  justify-content: flex-end;
 }
 
 /* .admin__content--header::before {
@@ -210,6 +211,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .admin__content--header__user span {
