--- a/public/components/HomeAdmin/HomeAdmin.css
+++ b/public/components/HomeAdmin/HomeAdmin.css
@@ -479,9 +479,8 @@ body {
     overflow: hidden; 
     display: flex; 
     margin-top: 10px;
-    margin-left: 160px;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
 }
 .file-input-label {
   opacity: 0;
@@ -503,8 +502,6 @@ body {
     display: flex;
     align-items: center;
     margin-top: 10px;
-    
-  
   }
   
   .form-group label {
@@ -1026,6 +1023,11 @@ body {
   justify-content: center;
   width: 100%;
 }
+#file-upload{
+  margin-top: 10px;
+  margin-left: 14%;
+}
+
 
 .image-container {
   width: 250px;
@@ -1041,7 +1043,7 @@ body {
   display: inline-block;
   /* Hiển thị như một phần tử inline-block */
   margin-top: 10px;
-  margin-left: 160px;
+  /* margin-left: 160px; */
 }
 
 .file-input-label {
@@ -1068,13 +1070,6 @@ body {
 }
 
 
-.form-group {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-
-
-}
 
 .form-group label {
   min-height: 20px;
@@ -1085,6 +1080,7 @@ body {
   margin-right: 10px;
   font-weight: bold;
   width: 150px;
+  top: 0;
 }
 
 .form-group input {
@@ -1974,6 +1970,7 @@ color: orange;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .receipt__form--add,
@@ -2366,6 +2363,7 @@ body.modal-open {
   }
 .error-message {
     text-align: left;
+    margin-top: 5px;
     margin-left: 475px;
     width: 50%;
     display: none;
@@ -2416,4 +2414,7 @@ body.modal-open {
   border-radius: 10px;
   padding: 10px 15px;
   width: 100%;
+}
+.form__receipt--img{
+  padding-bottom: 70px;
 }
