--- a/public/components/product/product.css
+++ b/public/components/product/product.css
@@ -50,15 +50,15 @@
     position: relative;
     width: 40%;
     height: 100%;
-    gap: 4%;
+    gap: 2%;
     top: 10%;
 }
 .overlay-body-right p {
     color: rgb(105, 105, 105);
     margin-right: 10px;
 }
-#overlay-price {
-    margin-bottom: 5px;
+#overlay-price,#overlay-price2 {
+    margin-bottom: 2px;
 }
 .overlay-body-right span {
     font-size: 25px;
@@ -388,7 +388,7 @@ input[type=number] {
 }
 .divproduct{
     width: 50%;
-    height: 350px;
+    height: 400px;
     margin:20px;
     border: 0px solid black;
     border-radius: 5px;
@@ -401,7 +401,7 @@ input[type=number] {
 }
 #img-product{
     width: 100%;
-    height: 80%;
+    height: 70%;
     position: relative;
     cursor: pointer;
     margin-bottom: 15px;
@@ -424,17 +424,28 @@ input[type=number] {
 }
 #mota-product p{
     font-weight: bold;
-    font-size: 15px;
-    margin-top: 15px;
+    font-size: 20px;
+    margin-top:5px;
     margin-left: 20px;
-    
-    
+}
+.price_padding{
+    padding-left: 20px;
+}
+.price_padding_2{
+    background-color: rgba(255, 0, 0, 0.697);
+    color: white;
+    border-radius: 20px;
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 5px;
+    margin-left: 76px;
+}
+#mota-product{
+    width: 100%;
+    /* height: 25%; */
 }
 
-#mota-product{
-    width: 80%;
-    height: 25%;
-}
 #datmua{
     width: 84.5%;
     height: 10%;
@@ -470,14 +481,13 @@ input[type=number] {
  
 }
 
-.divproduct p{
+.divproduct #mota-product{
     cursor: pointer;
     transition: transform 0.3s ease;
 }
-.divproduct p:hover{
+.divproduct #mota-product:hover{
     color: rgba(255, 0, 0, 0.727);
     transform: scale(1.05);
-
 }
 
 #img-product .fa-solid{
